Problems page (unfinished)

--- a/main.html
+++ b/main.html
@@ -3,13 +3,14 @@
 <head>
 <meta charset="utf-8">
 <title>LocalOrz</title>
-<link rel="stylesheet" type="text/css" href="resources/bootswatch-darkly/bootstrap.min.css">
+<!--<link rel="stylesheet" type="text/css" href="resources/bootswatch-darkly/bootstrap.min.css">-->
+<link rel="stylesheet" type="text/css" href="resources/bootstrap-3.2.0-dist/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="resources/common.css">
 </head>
 <body>
 
 <nav id="nav"></nav>
-<div class="container main-container" id="wrap">
+<div class="container-fluid main-container" id="wrap">
 </div>
 
 <script src="resources/jquery-2.1.1.min.js"></script>
