problem editing seems to work well

--- a/main.html
+++ b/main.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>LocalOrz</title>
-<!--<link rel="stylesheet" type="text/css" href="resources/bootswatch-darkly/bootstrap.min.css">-->
-<link rel="stylesheet" type="text/css" href="resources/bootstrap-3.2.0-dist/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="resources/bootswatch-darkly/bootstrap.min.css">
+<!--<link rel="stylesheet" type="text/css" href="resources/bootstrap-3.2.0-dist/css/bootstrap.min.css">-->
 <link rel="stylesheet" type="text/css" href="resources/common.css">
 </head>
 <body>
@@ -15,6 +15,7 @@
 
 <script src="resources/jquery-2.1.1.min.js"></script>
 <script src="resources/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
+<script src="resources/bootstrap-typeahead.js"></script>
 <script src="controller/main.js"></script>
 </body>
 </html>
