--- a/person.html
+++ b/person.html
@@ -4,10 +4,11 @@
 <meta charset="utf-8">
 <title>Judge Result</title>
 <style>
+@import url(resources/bootswatch-darkly/googlefonts-lato.css);
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 13px;
-    line-height: 20px;
+    font-family: Lato, Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    line-height: 22px;
 }
 
 a {
